k8s_loesungen/8_stateful_sets/app_ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: app-ingress
spec:
  rules:
    - host: qa8.k8s-schulung.cloud.viadee.de
      http:
        paths:
          - backend:
              serviceName: demo-app
              servicePort: 80
  tls:
    - secretName: tls-k8s-schulung-cloud-viadee-de
